tests/NormalTests/paczka1/fuzzy1/15261934.err
Error in line 17: 6CRJIyQHzf0 S544 87,1
Error in line 30: Eu5iq S59 89,0
